--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,67 +1,55 @@
 *{ vertical-align: top; }
 
 body {
-	font-family: Helvetica;
-	font-size: 0px;
-	margin: 0;
+	font-family: "Avenir";
+	font-weight: bold;
+	color: white;
+	margin: 0; 
 	padding: 0;
+	background: #254477;
 }
 
 .wrapper {
-	width: 960px;
-	background: #ccc;
+	width: 100%;
 	margin: 0 auto;
-	/* if top/bottom, and left/right are the same, 
-	collapse them as __px __px instead of 4 of those*/
-	/* 0 auto centers it on page*/
 
 }
 
-h1, h2 {
-	font-size: 16px;
-	margin: 0px;
-	font-weight: normal;
+.header {
+	width: 600px;
+	text-align: center;	
+	letter-spacing: 2px;
+	border-style: solid;
+	border-color: white;
+	border-width: 10px;
+	margin: 0 auto;
+	margin-top: 10%;
+}
+
+h1 {
+	font-size: 70px;
+	margin: 0;
+}
+
+h2 {
+	font-size: 50px;
+	margin: 0;
+}
+
+.pages {
+	width: 600px;
+	font-size: 40px;
+	margin-left: 24%;
+	display: inline-block;
+	line-height: 10px;
+
 }
 
 a:link {
-	color: #000000;
-	/*black - #000000*/
-	/*white - #ffffff*/
-	/*RR GG BB
-	ex. red - ff 00 00*/
+	color: white;
 	text-decoration: none;
 }
 
-a:visited { color: #00f; }
-a:hover { color: #ffff00; }
-a:active { color: #ff0000; }
-
-/*LVHA - order that links must go in (:link,:visited, 
-:hover, :active)*/
-
-.c {
-	background: #ff0;
-	font-size: 16px;
-	line-height: 20px;
-	margin: 0 15px 30px 15px;
-	display: inline-block;
-}
-
-.parent { font-size: 0; line-height: 0; }
-
-.no-gutters { margin: 0px; }
-.no-left-gutter { margin-left: 0px; }
-.no-right-gutter { margin-right: 0px }
-
-.c1 { width: 130px; background: #fff; }
-.c2 { width: 290px; }
-.c3 { width: 450px }
-.c4 { width: 610px; }
-.c5 { width: 710px; }
-.c6 { width: 930px; }
-	
-img {
-	width: 100%;
-	height: auto;
-}
-
+a:visited { color: white; }
+a:hover { color: #ffb2b7; }
+a:active { color: #ffb2b7; }
