--- a/space/spacecss.css
+++ b/space/spacecss.css
@@ -23,3 +23,8 @@ a:link {
 a:visited { color: #000000; }
 a:hover { color: #009933; }
 a:active { color: #009933; }
+
+h1 {
+	text-align: center;
+	margin-top: 15%;
+}
