--- a/assets/css/studio.css
+++ b/assets/css/studio.css
@@ -38,12 +38,12 @@ h2 {
 
 .pages {
 	width: 600px;
-	font-size: 40px;
-	margin-left: 24%;
-	display: inline-block;
+	font-size: 30px;
+	text-align: center;
+	margin: 0 auto;
 	line-height: 10px;
-
 }
+
 
 a:link {
 	color: white;
