--- a/typeface/typeface.css
+++ b/typeface/typeface.css
@@ -1,9 +1,9 @@
 ::-webkit-scrollbar { 
     display: none; 
-}
+} 
 
 .instructions {
-  width: 40%;
+  width: 30%;
   padding: 10px;
   margin: 0 auto;
   text-align: center;
@@ -15,6 +15,30 @@
 .page-2 { margin-top: 100px; }
 .page-3 { margin-top: 100px; }
 
+.action {
+  background: white;
+  border: 2px solid lightgrey;
+  margin-top: 10px;
+  box-sizing: border-box;
+  width: 32%;
+}
+
+.instructionswrapper {
+  width: 32%;
+  margin: 0 auto;
+  text-align: center;
+}
+.action2 {
+  background: white;
+  border: 2px solid lightgrey;
+  padding: 10px;
+  margin-top: 10px;
+  box-sizing: border-box;
+  width: 49%;
+  display: inline-block;
+}
+
+
 body {
   color: grey;
   font-family: Helvetica;
@@ -24,11 +48,11 @@ body {
 
 a:link {
   color: grey;
-  text-decoration: underline;
+  text-decoration: none;
 }
 a:visited { color: grey; }
-a:hover { color: white; }
-a:active { color: white; }
+a:hover { color: lightblue; }
+a:active { color: lightblue; }
 
 
 .pagewrapper {
@@ -38,7 +62,7 @@ a:active { color: white; }
 
 .part-1 { margin: 10% 0; }
 .part-2 { margin: 75% 0; }
-.part-3 { margin: 140% 0; }
+.part-3 { margin: 140% 0 10% 0; }
 
 .typefacewrapper {
   width: 100%;
