--- a/chance/chance.css
+++ b/chance/chance.css
@@ -12,7 +12,6 @@ body {
 }
 
 .mandala {
-  /*background-color: 0;*/
   width: 200px;
   height: 200px;
   position: fixed;
@@ -54,4 +53,6 @@ body {
   margin-bottom: 10px;
   padding: 5px;
   text-align: center;
+  transition: 0.3s ease;
+  z-index: 10;
 }
